--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,11 @@
+import com.zyhang.arouter.autowiredtransform.AutowiredPlugin
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+
+apply plugin: AutowiredPlugin
 
 android {
     compileSdkVersion 29
