--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,3 +47,5 @@ dependencies {
     implementation 'com.alibaba:arouter-api:1.5.0'
     kapt 'com.alibaba:arouter-compiler:1.2.2'
 }
+
+apply plugin: 'bytex'
