--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        classpath "com.bytedance.android.byteX:base-plugin:$bytex_version"
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$jfrog_version"
     }
 }
 
