--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,3 +50,6 @@ dependencies {
 
 apply plugin: 'bytex'
 apply plugin: 'com.zyhang.arouter.autowired_plugin'
+AutowiredExtension {
+    enableInDebug true
+}
