--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,15 @@ gradle_version=4.1.1
 kotlin_version=1.4.10
 bytex_version=0.2.3
 jfrog_version=1.8.4
+
+POM_GROUP_ID=maven.evilmouth.arouter
+POM_PUBLISH_VERSION=1.0.0
+
+POM_REPO_NAME=maven
+POM_LICENCES=Apache-2.0
+POM_WEBSITE=https://github.com/EvilMouth/ARouter-AutowiredPlugin
+POM_ISSUE_TRACKER=https://github.com/EvilMouth/ARouter-AutowiredPlugin/issues
+POM_REPOSITORY=https://github.com/EvilMouth/ARouter-AutowiredPlugin.git
+POM_GITHUB_REPO=EvilMouth/ARouter-AutowiredPlugin
+
+buildSrcMode=true
