--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 gradle_version=4.1.1
-kotlin_version=1.4.10
+kotlin_version=1.4.20
 bytex_version=0.2.3
 jfrog_version=1.8.4
 
@@ -36,4 +36,4 @@ POM_REPOSITORY=https://github.com/EvilMouth/ARouter-AutowiredPlugin.git
 POM_GITHUB_REPO=EvilMouth/ARouter-AutowiredPlugin
 
 # include plugin module into buildSrc, so that can debug plugin development
-buildSrcMode=false
+buildSrcMode=true
